# system-admin

./: .env.production.example  .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  app.yaml  deploy.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: db.py  dependencies.py  main.py  schemas.py
backend/app/admin/: __init__.py  auth.py  base.py  setup.py  views.py
backend/app/api/: __init__.py  auth.py  categories.py  products.py  users.py
backend/app/api/auth/: __init__.py  get_session.py
backend/app/api/categories/: __init__.py  category_tree.py  create_category.py  delete_category.py  get_category.py  list_categories.py  reorder_categories.py  service.py  update_category.py
backend/app/api/products/: __init__.py  create_product.py  delete_product.py  delete_product_image.py  get_product.py  list_products.py  reorder_product_images.py  service.py  suggest_product_fields.py  update_product.py  upload_product_file.py
backend/app/api/tenant/: __init__.py  get_tenant.py  service.py  update_tenant.py
backend/app/api/users/: __init__.py  create_user.py  delete_user.py  get_user.py  list_users.py  service.py  update_user.py
backend/app/core/: auth.py  config.py  database.py  logging.py  security.py  storage.py  tenant.py
backend/app/models/: __init__.py  base.py  category.py  product.py  pydantic_json.py  tenant.py  tenant_config.py  user.py
backend/app/routers/: __init__.py  auth.py  categories.py  products.py  tenant.py  users.py
backend/app/routers/products/: __init__.py  common.py  create_product.py  delete_product.py  delete_product_image.py  get_product.py  list_products.py  reorder_product_images.py  suggest_product_fields.py  update_product.py  upload_product_file.py
backend/app/schemas/: __init__.py  auth.py  categories.py  products.py  tenant.py  users.py
backend/app/scripts/: __init__.py  create_user.py  shell.py
backend/migrations/: env.py
backend/migrations/models/: 0_20260423153802_init.py  1_20260423155414_add_user_is_superuser.py  2_20260423164306_add_category_is_active.py  3_20260423164404_add_product_is_active.py
backend/migrations/versions/: f2048f966ad9_initial_schema.py
backend/scripts/: generate_api_key.py  shell.py
backend/tests/: __init__.py  test_multi_tenant.py
backend/tests/app/: __init__.py  conftest.py  test_main.py
backend/tests/app/api/: test_auth_session.py  test_categories.py  test_products.py
backend/tests/app/api/auth/: test_get_session.py
backend/tests/app/api/categories/: test_category_tree.py  test_create_category.py  test_delete_category.py  test_list_categories.py  test_reorder_categories.py  test_update_category.py
backend/tests/app/api/products/: test_create_product.py  test_delete_product_image.py  test_get_product.py  test_list_products.py  test_reorder_product_images.py  test_suggest_product_fields.py  test_update_product.py  test_upload_product_file.py
backend/tests/app/api/tenant/: test_get_tenant.py  test_update_tenant.py
backend/tests/app/api/users/: test_create_user.py  test_delete_user.py  (+3 more)
backend/tests/app/core/: test_auth.py
backend/tests/app/models/: test_schema.py
backend/tests/app/routers/: test_auth_session.py  test_categories.py  test_products.py  test_tenant.py  test_users.py
(+173 files in other folders)
