[project]
name = "system-admin-api"
version = "0.1.0"
description = "FastAPI backend for system-admin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "fastapi-utils>=0.8.0",
    "greenlet>=3.0.0",
    "bcrypt>=4.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "typing-inspect>=0.9.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite",
    "factory-boy>=3.3",
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
